@@ -33,14 +33,12 @@ namespace Hyena.Widgets
 {
     public enum Blocking
     {
-        None,
         Upstage,
         Downstage
     }
     
     public enum Easing
     {
-        None,
         Linear,
         QuadraticIn,
         QuadraticOut,
